--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^0.9.2",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.8",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^5.0.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
